@@ -66,7 +66,7 @@
 				</os>
 			</activation>
 			<properties>
-				<os-jvm-flags>-XstartOnFirstThread</os-jvm-flags>
+ 				<os-jvm-flags>-XstartOnFirstThread</os-jvm-flags>
 			</properties>
 		</profile>
 		<profile>
@@ -93,7 +93,7 @@
 				<jdk>11</jdk>
 			</activation>
 			<properties>
-				<jvm-flags></jvm-flags>
+				<jvm-flags>--add-modules=ALL-SYSTEM</jvm-flags>
 			</properties>
 		</profile>
 		<profile>
@@ -318,8 +318,8 @@
 					<!-- <application>org.eclipse.ui.ide.workbench</application> -->
 					<product>tmdmaker.rcp.product</product>
 					<!-- <application>org.eclipse.e4.ui.workbench.swt.E4Application</application> -->
-					<argLine>${tycho.testArgLine} -Xms40m -Xmx1G ${os-jvm-flags}
-						${jvm-flags}</argLine>
+					<argLine>${tycho.testArgLine} -Xms40m -Xmx1G ${jvm-flags} ${os-jvm-flags}
+						</argLine>
 					<appArgLine>-clean -nl en</appArgLine>
 				</configuration>
 			</plugin>
